feat: Add all 6 languages + AI translation with OpenAI
- Added locales: pl, en, de, ro, cs, hu
- Created /api/translate endpoint using OpenAI GPT-4o-mini
- Added TranslateButton component to HeroSlides collection
- One-click translation to all languages from current locale

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ DATABASE_URI=postgresql://payload:your_password@localhost:5433/payload
 PAYLOAD_SECRET=your-super-secret-key-min-32-chars
 NEXT_PUBLIC_SERVER_URL=http://localhost:3001
 
+# OpenAI (for AI translations)
+OPENAI_API_KEY=sk-your-openai-api-key
+
 # Production
 # NEXT_PUBLIC_SERVER_URL=https://cms.presta.trkhspl.com
